@@ -192,14 +192,14 @@ source-repository head
 
 custom-setup
   Setup-Depends:
-    base (>= 4.11.1.0 && < 5.0),
+    base (>= 4.15.1.0 && < 5.0),
     split,
     filepath,
     exceptions,
     bytestring,
     filepath-bytestring (>= 1.4.2.1.4),
-    process (>= 1.6.3),
-    time (>= 1.5.0),
+    process (>= 1.6.4),
+    time (>= 1.9.1),
     directory (>= 1.2.7.0),
     async,
     utf8-string,
@@ -208,7 +208,7 @@ custom-setup
 Executable git-annex
   Main-Is: git-annex.hs
   Build-Depends:
-   base (>= 4.11.1.0 && < 5.0),
+   base (>= 4.15.1.0 && < 5.0),
    network-uri (>= 2.6),
    optparse-applicative (>= 0.14.2),
    containers (>= 0.5.8),
@@ -216,11 +216,11 @@ Executable git-annex
    stm (>= 2.3),
    mtl (>= 2),
    uuid (>= 1.2.6),
-   process (>= 1.6.3),
+   process (>= 1.6.4),
    data-default,
    case-insensitive,
    random,
-   dlist,
+   dlist (>= 1.0),
    unix-compat (>= 0.5 && < 0.8),
    SafeSemaphore,
    async,
@@ -246,20 +246,20 @@ Executable git-annex
    http-conduit (>= 2.3.0),
    http-client-restricted (>= 0.0.2),
    conduit,
-   time (>= 1.5.0),
+   time (>= 1.9.1),
    old-locale,
    persistent-sqlite (>= 2.8.1),
    persistent (>= 2.8.1),
-   persistent-template,
+   persistent-template (>= 2.8.0),
    unliftio-core,
    microlens,
-   aeson,
+   aeson (>= 2.0.0),
    vector,
    tagsoup,
    unordered-containers,
-   feed (>= 1.0.0),
+   feed (>= 1.1.0),
    regex-tdfa,
-   socks,
+   socks (>= 0.6.0),
    byteable,
    stm-chans,
    securemem,
@@ -271,17 +271,17 @@ Executable git-annex
    concurrent-output (>= 1.10),
    unbounded-delays,
    QuickCheck (>= 2.10.0),
-   tasty (>= 1.2),
+   tasty (>= 1.3.0),
    tasty-hunit,
    tasty-quickcheck,
    tasty-rerun,
    ansi-terminal >= 0.9,
-   aws (>= 0.20),
+   aws (>= 0.22.1),
    DAV (>= 1.0),
    network (>= 3.0.0.0),
    network-bsd,
    git-lfs (>= 1.2.0),
-   clock (>= 0.2.0.0)
+   clock (>= 0.3.0)
   CC-Options: -Wall
   GHC-Options: -Wall -fno-warn-tabs  -Wincomplete-uni-patterns
   Default-Language: Haskell2010
