@@ -13,7 +13,6 @@ flags:
     servant: true
 packages:
 - '.'
-resolver: nightly-2024-07-29
+resolver: lts-23.2
 extra-deps:
 - filepath-bytestring-1.4.100.3.2
-- aws-0.24.3
