@@ -1,45 +1,0 @@
-flags:
-  git-annex:
-    production: true
-    parallelbuild: true
-    assistant: true
-    pairing: true
-    torrentparser: true
-    magicmime: false
-    dbus: false
-    debuglocks: false
-    benchmark: false
-    crypton: false
-    servant: false
-packages:
-- '.'
-extra-deps:
-- IfElse-0.85
-- aws-0.22
-- bloomfilter-2.0.1.0
-- tasty-1.2
-- tasty-rerun-1.1.14
-- torrent-10000.1.1
-- sandi-0.5
-- filepath-bytestring-1.4.2.1.6
-- ansi-terminal-0.9.1
-- ansi-wl-pprint-0.6.9
-- concurrent-output-1.10.15
-- git-lfs-1.2.0
-- http-client-restricted-0.0.5
-- http-client-0.7.11
-- http-client-tls-0.3.6.1
-- http-conduit-2.3.8
-- network-3.0.1.0
-- network-bsd-2.8.1.0
-- dbus-1.2.4
-- simple-sendfile-0.2.30
-- network-multicast-0.3.2
-- socks-0.6.1
-- wai-extra-3.0.25
-- warp-3.2.26
-- connection-0.3.0
-- DAV-1.3.4
-explicit-setup-deps:
-  git-annex: true
-resolver: lts-12.14
